Update Layout and fix spacing

--- a/css/services.css
+++ b/css/services.css
@@ -1,219 +1,240 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
-
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Poppins, sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Poppins, sans-serif;
 }
 
 body {
-  height: 3000px;
+    height: 3000px;
 }
 
 li,
 a {
-  font-weight: 600px;
-  font-size: 16px;
-  color: #121212;
-  text-decoration: none;
+    font-weight: 600px;
+    font-size: 16px;
+    color: #121212;
+    text-decoration: none;
 }
+
 
 /* opening of Section 1 */
 
 .heading {
-  margin-top: 1.5em;
-  font-size: 3.2em;
-  font-weight: 600;
-  text-align: center;
-  justify-self: center;
+    margin-top: 1.5em;
+    font-size: 3.2em;
+    font-weight: 600;
+    text-align: center;
+    justify-self: center;
 }
+
 
 /* closing of Section 1 */
 
+
 /* opening of video container */
+
 .video-container {
-  max-width: 90%;
-  margin-top: 5em;
-  background-size: cover;
-  justify-content: center;
-  align-self: center;
-  margin-inline: auto;
+    max-width: 90%;
+    margin-top: 5em;
+    background-size: cover;
+    justify-content: center;
+    align-self: center;
+    margin-inline: auto;
 }
 
 .services-video {
-  max-width: 90%;
+    max-width: 90%;
 }
 
+
 /* closing of video container */
+
 
 /* opening of what we do */
 
 .whatwedo {
-  display: flex;
-  flex-direction: row;
-  justify-content: center !important;
-  align-items: center;
-  margin-top: 5em;
+    display: flex;
+    flex-direction: row;
+    justify-content: center !important;
+    align-items: center;
+    margin-top: 5em;
+    column-gap: 48px;
 }
 
 .whatwedo-heading {
-  font-size: 3em;
-  font-weight: 600;
-  /* max-width: 100%; */
-  justify-self: center;
-  text-align: center;
-  margin: 1em 0em;
+    font-size: 36px;
+    font-weight: 600;
+    /* max-width: 100%; */
+    justify-self: center;
+    text-align: start;
+    margin: 1em 0em;
 }
 
 .whatwedo-body {
-  font-size: 1.2em;
-  color: #666666;
-  text-align:justify;
-  max-width: 100%;
+    font-size: 20px;
+    color: #666666;
+    text-align: justify;
+    max-width: 100%;
 }
 
+
 /* closing of what we do */
+
 
 /* opening of service briefs */
 
 .service-briefs {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 5em;
-  flex-direction: column;
-  gap: 3.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5em;
+    flex-direction: column;
+    gap: 3.5em;
 }
 
 .service-briefs-heading {
-  width: 80%;
-  font-size: 3em;
-  font-weight: 600;
-  text-align: center;
-  justify-content: center;
-  margin: 2em 0em;
+    width: 80%;
+    font-size: 3em;
+    font-weight: 600;
+    text-align: center;
+    justify-content: center;
+    margin: 1.2em 0em;
 }
 
 .service-briefs-container {
-  display: flex;
-  justify-content: center;
-  justify-items: space-around;
-  align-items: center;
-  flex-direction: row;
-  max-width: 90%;
-  /* gap: 120px; */
+    display: flex;
+    justify-content: center;
+    justify-items: space-around;
+    align-items: center;
+    flex-direction: row;
+    max-width: 90%;
+    column-gap: 48px;
+    /* gap: 120px; */
+}
+
+.service-briefs-img-container {
+    max-width: fit-content !important;
 }
 
 .service-image {
-  background-size: cover;
-  max-width: 24em;
-  border-radius: 20px;
-  cursor: pointer;
-  transition: all 0.3s ease-in-out;
+    background-size: cover;
+    max-width: 24em;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
 }
 
 .service-image:hover {
-  transform: scale(1.3);
+    transform: scale(1.3);
 }
 
 .service-image-container {
-  overflow: hidden;
-  max-width: 24em;
-  max-height: 24em;
-  border-radius: 20px;
+    overflow: hidden;
+    max-width: 24em;
+    max-height: 24em;
+    border-radius: 20px;
 }
 
 .service-container-description {
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 20px;
-  max-width: 90%;
-  margin: 2em 0em;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+    max-width: 90%;
+    margin: 2em 0em;
 }
 
 .service-description-heading {
-  font-size: 2em;
-  font-weight: 600;
+    font-size: 1.8em;
+    padding-left: 0px !important;
+    font-weight: 600;
 }
 
 .service-description-body {
-  font-size: 18px;
-  color: #666;
-  max-width: 90%;
-  text-align: justify;
+    font-size: 18px;
+    color: #666;
+    max-width: 90%;
+    padding-left: 0px !important;
+    text-align: justify;
+}
 
+.service-description-body+.col-12 {
+    padding-left: 0px !important;
 }
 
 .service-description-button {
-  border: 1px solid #e2e2e2;
-  padding: 1em 1.5em;
-  border-radius: 20px;
-  cursor: pointer;
-  font-size: 1em;
-  font-weight: 500;
-  background-image: linear-gradient(to top, #e2e2e2 50%, #ffffff 50%);
-  background-size: 100% 200%;
-  background-position: 0% 0%;
-  transition: all 0.3s ease 0s;
+    border: 1px solid #e2e2e2;
+    padding: 1em 1.5em;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: 500;
+    background-image: linear-gradient(to top, #e2e2e2 50%, #ffffff 50%);
+    background-size: 100% 200%;
+    background-position: 0% 0%;
+    transition: all 0.3s ease 0s;
 }
 
 .service-description-button:hover {
-  border: 1px solid #e2e2e2;
-  background-position: 0% 100%;
+    border: 1px solid #e2e2e2;
+    background-position: 0% 100%;
 }
 
+
 /* closing of service briefs */
+
 
 /* opening of working benefits */
 
 .working-benefits {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin-top: 8em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 8em;
 }
 
 .working-benefits-heading {
-  font-size: 3em;
-  font-weight: 600;
-  /* max-width: 100%; */
-  justify-self: center;
-  text-align: center;
+    font-size: 3em;
+    font-weight: 600;
+    /* max-width: 100%; */
+    justify-self: center;
+    text-align: center;
 }
 
 .working-benefits-container {
-  display: flex;
-  /* grid-template-columns: repeat(2, 50em); */
-  flex-direction: column;
-  justify-content: center;
-  margin-top: 3em;
-  max-width: 95%;
+    display: flex;
+    /* grid-template-columns: repeat(2, 50em); */
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 3em;
+    max-width: 95%;
 }
- .working-benefits-item {
-  margin-top: 3em;
-  max-width: 100%;
+
+.working-benefits-item {
+    margin-top: 3em;
+    max-width: 100%;
 }
 
 .working-benefits-item-heading {
-  font-size: 1.2em;
-  font-weight: 600;
-  padding-bottom: 1em;
-  letter-spacing: 2px;
-  margin-top: 2em;
+    font-size: 1.2em;
+    font-weight: 600;
+    padding-bottom: 1em;
+    letter-spacing: 2px;
+    margin-top: 2em;
 }
 
 .working-benefits-item-body {
-  font-size: 1em;
-  color: #868686;
-  width: 95%;
-  text-align: justify;
-  justify-content: center;
-  margin-right: 2em;
+    font-size: 1em;
+    color: #868686;
+    width: 95%;
+    text-align: justify;
+    justify-content: center;
+    margin-right: 2em;
 }
 
-/* closing of working benefits */
 
+/* closing of working benefits */
